Update links in README.md and index.html: Correct LinkedIn URL and add GitHub link

--- a/index.html
+++ b/index.html
@@ -698,11 +698,11 @@
             <i data-lucide="phone"></i>
             <span>+977 9864434019</span>
           </a>
-          <a href="https://linkedin.com/in/sangamsubedi" target="_blank" rel="noopener" class="footer-link">
+          <a href="https://linkedin.com/in/sangam-subedi-142580268" target="_blank" rel="noopener" class="footer-link">
             <i data-lucide="linkedin"></i>
             <span>LinkedIn</span>
           </a>
-          <a href="https://github.com/sangamsubedi" target="_blank" rel="noopener" class="footer-link">
+          <a href="https://github.com/SanG099" target="_blank" rel="noopener" class="footer-link">
             <i data-lucide="github"></i>
             <span>GitHub</span>
           </a>
