--- a/index.html
+++ b/index.html
@@ -259,12 +259,12 @@
             <div class="project-image-placeholder">
               <svg viewBox="0 0 400 240" xmlns="http://www.w3.org/2000/svg">
                 <rect width="400" height="240" fill="#0f1729"/>
-                <polyline points="20,200 80,140 140,170 200,90 260,120 320,60 380,80" fill="none" stroke="#00e5a0" stroke-width="3"/>
-                <circle cx="80" cy="140" r="4" fill="#00e5a0"/>
-                <circle cx="140" cy="170" r="4" fill="#00e5a0"/>
-                <circle cx="200" cy="90" r="4" fill="#00e5a0"/>
-                <circle cx="260" cy="120" r="4" fill="#00e5a0"/>
-                <circle cx="320" cy="60" r="4" fill="#00e5a0"/>
+                <polyline points="20,200 80,140 140,170 200,90 260,120 320,60 380,80" fill="none" stroke="#00c853" stroke-width="3"/>
+                <circle cx="80" cy="140" r="4" fill="#00c853"/>
+                <circle cx="140" cy="170" r="4" fill="#00c853"/>
+                <circle cx="200" cy="90" r="4" fill="#00c853"/>
+                <circle cx="260" cy="120" r="4" fill="#00c853"/>
+                <circle cx="320" cy="60" r="4" fill="#00c853"/>
                 <text x="200" y="230" text-anchor="middle" fill="#4a5568" font-size="11" font-family="Inter">Churn Prediction Model</text>
               </svg>
             </div>
@@ -298,12 +298,12 @@
             <div class="project-image-placeholder">
               <svg viewBox="0 0 400 240" xmlns="http://www.w3.org/2000/svg">
                 <rect width="400" height="240" fill="#0f1729"/>
-                <rect x="40" y="60" width="40" height="150" rx="4" fill="#3b82f6" opacity="0.7"/>
-                <rect x="100" y="100" width="40" height="110" rx="4" fill="#3b82f6" opacity="0.85"/>
-                <rect x="160" y="40" width="40" height="170" rx="4" fill="#00e5a0"/>
-                <rect x="220" y="80" width="40" height="130" rx="4" fill="#3b82f6" opacity="0.85"/>
-                <rect x="280" y="120" width="40" height="90" rx="4" fill="#3b82f6" opacity="0.7"/>
-                <rect x="340" y="70" width="40" height="140" rx="4" fill="#3b82f6" opacity="0.8"/>
+                <rect x="40" y="60" width="40" height="150" rx="4" fill="#e53935" opacity="0.7"/>
+                <rect x="100" y="100" width="40" height="110" rx="4" fill="#e53935" opacity="0.85"/>
+                <rect x="160" y="40" width="40" height="170" rx="4" fill="#00c853"/>
+                <rect x="220" y="80" width="40" height="130" rx="4" fill="#e53935" opacity="0.85"/>
+                <rect x="280" y="120" width="40" height="90" rx="4" fill="#e53935" opacity="0.7"/>
+                <rect x="340" y="70" width="40" height="140" rx="4" fill="#e53935" opacity="0.8"/>
                 <text x="200" y="230" text-anchor="middle" fill="#4a5568" font-size="11" font-family="Inter">Sales Performance Dashboard</text>
               </svg>
             </div>
@@ -337,11 +337,11 @@
             <div class="project-image-placeholder">
               <svg viewBox="0 0 400 240" xmlns="http://www.w3.org/2000/svg">
                 <rect width="400" height="240" fill="#0f1729"/>
-                <ellipse cx="200" cy="120" rx="150" ry="80" fill="none" stroke="#3b82f6" stroke-width="1" opacity="0.3"/>
-                <ellipse cx="160" cy="110" rx="80" ry="60" fill="none" stroke="#00e5a0" stroke-width="2"/>
-                <ellipse cx="240" cy="110" rx="80" ry="60" fill="none" stroke="#a78bfa" stroke-width="2"/>
-                <text x="150" y="115" text-anchor="middle" fill="#00e5a0" font-size="12" font-family="Inter">ETL</text>
-                <text x="250" y="115" text-anchor="middle" fill="#a78bfa" font-size="12" font-family="Inter">BI</text>
+                <ellipse cx="200" cy="120" rx="150" ry="80" fill="none" stroke="#e53935" stroke-width="1" opacity="0.3"/>
+                <ellipse cx="160" cy="110" rx="80" ry="60" fill="none" stroke="#00c853" stroke-width="2"/>
+                <ellipse cx="240" cy="110" rx="80" ry="60" fill="none" stroke="#ff6f61" stroke-width="2"/>
+                <text x="150" y="115" text-anchor="middle" fill="#00c853" font-size="12" font-family="Inter">ETL</text>
+                <text x="250" y="115" text-anchor="middle" fill="#ff6f61" font-size="12" font-family="Inter">BI</text>
                 <text x="200" y="230" text-anchor="middle" fill="#4a5568" font-size="11" font-family="Inter">Automated Reporting Pipeline</text>
               </svg>
             </div>
@@ -375,10 +375,10 @@
             <div class="project-image-placeholder">
               <svg viewBox="0 0 400 240" xmlns="http://www.w3.org/2000/svg">
                 <rect width="400" height="240" fill="#0f1729"/>
-                <circle cx="200" cy="110" r="70" fill="none" stroke="#3b82f6" stroke-width="2"/>
-                <path d="M200 40 A70 70 0 0 1 258 145" fill="#00e5a0" opacity="0.6"/>
-                <path d="M258 145 A70 70 0 0 1 150 155" fill="#a78bfa" opacity="0.6"/>
-                <path d="M150 155 A70 70 0 0 1 200 40" fill="#3b82f6" opacity="0.6"/>
+                <circle cx="200" cy="110" r="70" fill="none" stroke="#e53935" stroke-width="2"/>
+                <path d="M200 40 A70 70 0 0 1 258 145" fill="#00c853" opacity="0.6"/>
+                <path d="M258 145 A70 70 0 0 1 150 155" fill="#ff6f61" opacity="0.6"/>
+                <path d="M150 155 A70 70 0 0 1 200 40" fill="#e53935" opacity="0.6"/>
                 <text x="200" y="115" text-anchor="middle" fill="#e2e8f0" font-size="14" font-family="Inter" font-weight="bold">KPIs</text>
                 <text x="200" y="230" text-anchor="middle" fill="#4a5568" font-size="11" font-family="Inter">HR Analytics Dashboard</text>
               </svg>
@@ -415,13 +415,13 @@
                 <rect width="400" height="240" fill="#0f1729"/>
                 <g opacity="0.8">
                   <rect x="30" y="50" width="100" height="16" rx="3" fill="#1e293b"/>
-                  <rect x="30" y="50" width="72" height="16" rx="3" fill="#00e5a0" opacity="0.6"/>
+                  <rect x="30" y="50" width="72" height="16" rx="3" fill="#00c853" opacity="0.6"/>
                   <rect x="30" y="76" width="100" height="16" rx="3" fill="#1e293b"/>
-                  <rect x="30" y="76" width="88" height="16" rx="3" fill="#3b82f6" opacity="0.6"/>
+                  <rect x="30" y="76" width="88" height="16" rx="3" fill="#e53935" opacity="0.6"/>
                   <rect x="30" y="102" width="100" height="16" rx="3" fill="#1e293b"/>
-                  <rect x="30" y="102" width="55" height="16" rx="3" fill="#a78bfa" opacity="0.6"/>
+                  <rect x="30" y="102" width="55" height="16" rx="3" fill="#ff6f61" opacity="0.6"/>
                   <rect x="30" y="128" width="100" height="16" rx="3" fill="#1e293b"/>
-                  <rect x="30" y="128" width="95" height="16" rx="3" fill="#00e5a0" opacity="0.6"/>
+                  <rect x="30" y="128" width="95" height="16" rx="3" fill="#00c853" opacity="0.6"/>
                 </g>
                 <g transform="translate(180,30)">
                   <rect width="190" height="170" rx="8" fill="#1e293b" opacity="0.5"/>
@@ -462,23 +462,23 @@
                 <rect width="400" height="240" fill="#0f1729"/>
                 <g transform="translate(50,30)">
                   <rect width="300" height="20" rx="4" fill="#1e293b"/>
-                  <rect width="220" height="20" rx="4" fill="#3b82f6" opacity="0.5"/>
+                  <rect width="220" height="20" rx="4" fill="#e53935" opacity="0.5"/>
                 </g>
                 <g transform="translate(50,60)">
                   <rect width="300" height="20" rx="4" fill="#1e293b"/>
-                  <rect width="280" height="20" rx="4" fill="#00e5a0" opacity="0.5"/>
+                  <rect width="280" height="20" rx="4" fill="#00c853" opacity="0.5"/>
                 </g>
                 <g transform="translate(50,90)">
                   <rect width="300" height="20" rx="4" fill="#1e293b"/>
-                  <rect width="150" height="20" rx="4" fill="#a78bfa" opacity="0.5"/>
+                  <rect width="150" height="20" rx="4" fill="#ff6f61" opacity="0.5"/>
                 </g>
                 <g transform="translate(50,120)">
                   <rect width="300" height="20" rx="4" fill="#1e293b"/>
-                  <rect width="260" height="20" rx="4" fill="#3b82f6" opacity="0.5"/>
+                  <rect width="260" height="20" rx="4" fill="#e53935" opacity="0.5"/>
                 </g>
                 <g transform="translate(50,150)">
                   <rect width="300" height="20" rx="4" fill="#1e293b"/>
-                  <rect width="190" height="20" rx="4" fill="#00e5a0" opacity="0.5"/>
+                  <rect width="190" height="20" rx="4" fill="#00c853" opacity="0.5"/>
                 </g>
                 <text x="200" y="230" text-anchor="middle" fill="#4a5568" font-size="11" font-family="Inter">Supply Chain Optimization</text>
               </svg>
